# helios-core

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  requirements.txt
helios/: .gitignore  conftest.py  pyproject.toml  requirements-dev.txt
helios/collectors/: gmail_himalaya_collector.py
helios/config/: config.example.yaml
helios/docs/: CHANNELS.md  CONTEXT_ENDPOINT.md  DASHBOARD.md  HELIOS_BRAIN_V1.md
helios/helios/: __init__.py  agenda.py  brain_state.py  circuit_breaker.py  config_loader.py  context_export.py  correlator.py  crypto.py  daily_intelligence.py  data_ingestion.py  discord_push.py  dispatcher.py  dm_listener.py  dream_engine.py  engine.py  freshness.py  ha_client.py  icloud_helper.py  insight_engine.py  integration_bus.py  llm_bridge.py  location_zones.py  main.py  matrix_pusher.py  module_health.py  mood_handler.py  narrative_engine.py  narrative_templates.py  obsidian_writer.py  outcome_tracker.py  predictor.py  preference_engine.py  proactive_intelligence.py  query_engine.py  query_patterns.py  reaction_poller.py  rules_v2.py  scheduler.py  self_healing.py  skeptical_memory.py  (+5 more)
helios/tests/: __init__.py  conftest.py  test_action_engine.py  test_activity_metric_fix.py  test_agenda.py  test_alert_dispatcher_channels.py  test_arrival_notification.py  test_brain_state.py  test_briefing.py  test_calendar.py  test_calendar_ha_migration.py  test_channels.py  test_circuit_breaker.py  test_config_ha.py  test_config_loader.py  test_context_api.py  test_correlator.py  test_correlator_expansion.py  test_dashboard.py  (+50 more)
(+121 files in other folders)
